<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/signup_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/signup_input_userlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/hint_user_login"
                android:layout_marginBottom="20dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/signup_input_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/hint_passwd"
                android:inputType="textPassword"
                android:layout_marginBottom="20dp"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/signup_input_vcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/hint_verify_code"/>
            <ImageView
                android:id="@+id/signup_image_vcode"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <me.codetalk.custom.view.SpinnerButton
            xmlns:flow="http://schemas.android.com/apk/res-auto"
            android:id="@+id/signup_spinner_btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            flow:actionButtonText="@string/signup"
            flow:actionButtonTextColor="@color/action_text_color"
            flow:actionButtonTextSize="20dp"
            flow:actionButtonBackground="@drawable/sel_bg_default_text_btn_8dp"
            flow:actionButtonPaddingLeft="32dp"
            flow:actionButtonPaddingRight="32dp"/>

        <TextView
            android:id="@+id/signup_action_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_u"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

</LinearLayout>